// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic tests Render plain table 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align:left;white-space:nowrap"
      >
        <span>
          number
        </span>
      </th>
      <th
        style="text-align:left;white-space:nowrap"
      >
        <span>
          name
        </span>
      </th>
      <th
        style="text-align:left;white-space:nowrap"
      >
        <span>
          party
        </span>
      </th>
      <th
        style="text-align:left;white-space:nowrap"
      >
        <span>
          birth_year
        </span>
      </th>
      <th
        style="text-align:left;white-space:nowrap"
      >
        <span>
          death_year
        </span>
      </th>
      <th
        style="text-align:right;white-space:nowrap;width:140px"
      >
        <span>
          took_office
        </span>
      </th>
      <th
        style="text-align:left;white-space:nowrap"
      >
        <span>
          left_office
        </span>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <div>
          1
        </div>
      </td>
      <td>
        <div>
          George Washington
        </div>
      </td>
      <td>
        <div>
          No Party
        </div>
      </td>
      <td>
        <div>
          1732
        </div>
      </td>
      <td>
        <div>
          1799
        </div>
      </td>
      <td
        style="width:140px;text-align:right"
      >
        <div>
          1789-04-30
        </div>
      </td>
      <td>
        <div>
          1797-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          2
        </div>
      </td>
      <td>
        <div>
          John Adams
        </div>
      </td>
      <td>
        <div>
          Federalist
        </div>
      </td>
      <td>
        <div>
          1735
        </div>
      </td>
      <td>
        <div>
          1826
        </div>
      </td>
      <td
        style="width:140px;text-align:right"
      >
        <div>
          1797-03-04
        </div>
      </td>
      <td>
        <div>
          1801-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          3
        </div>
      </td>
      <td>
        <div>
          Thomas Jefferson
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1743
        </div>
      </td>
      <td>
        <div>
          1826
        </div>
      </td>
      <td
        style="width:140px;text-align:right"
      >
        <div>
          1801-03-04
        </div>
      </td>
      <td>
        <div>
          1809-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          4
        </div>
      </td>
      <td>
        <div>
          James Madison
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1751
        </div>
      </td>
      <td>
        <div>
          1836
        </div>
      </td>
      <td
        style="width:140px;text-align:right"
      >
        <div>
          1809-03-04
        </div>
      </td>
      <td>
        <div>
          1817-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          5
        </div>
      </td>
      <td>
        <div>
          James Monroe
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1758
        </div>
      </td>
      <td>
        <div>
          1831
        </div>
      </td>
      <td
        style="width:140px;text-align:right"
      >
        <div>
          1817-03-04
        </div>
      </td>
      <td>
        <div>
          1825-03-04
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`basic tests Render plain table with custom cellComponent 1`] = `
Array [
  <span />,
  <span />,
  <span />,
  <span />,
  <span />,
  <table>
    <thead>
      <tr>
        <th
          style="text-align:left;white-space:nowrap"
        >
          <span>
            number
          </span>
        </th>
        <th
          style="text-align:left;white-space:nowrap"
        >
          <span>
            name
          </span>
        </th>
        <th
          style="text-align:left;white-space:nowrap"
        >
          <span>
            party
          </span>
        </th>
        <th
          style="text-align:left;white-space:nowrap"
        >
          <span>
            birth_year
          </span>
        </th>
        <th
          style="text-align:left;white-space:nowrap"
        >
          <span>
            death_year
          </span>
        </th>
        <th
          style="text-align:right;white-space:nowrap;width:140px"
        >
          <span>
            took_office
          </span>
        </th>
        <th
          style="text-align:left;white-space:nowrap"
        >
          <span>
            left_office
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div>
            George Washington
          </div>
        </td>
        <td>
          <div>
            No Party
          </div>
        </td>
        <td>
          <div>
            1732
          </div>
        </td>
        <td>
          <div>
            1799
          </div>
        </td>
        <td
          style="width:140px;text-align:right"
        >
          <div>
            1789-04-30
          </div>
        </td>
        <td>
          <div>
            1797-03-04
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div>
            John Adams
          </div>
        </td>
        <td>
          <div>
            Federalist
          </div>
        </td>
        <td>
          <div>
            1735
          </div>
        </td>
        <td>
          <div>
            1826
          </div>
        </td>
        <td
          style="width:140px;text-align:right"
        >
          <div>
            1797-03-04
          </div>
        </td>
        <td>
          <div>
            1801-03-04
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div>
            Thomas Jefferson
          </div>
        </td>
        <td>
          <div>
            Democratic-Republican
          </div>
        </td>
        <td>
          <div>
            1743
          </div>
        </td>
        <td>
          <div>
            1826
          </div>
        </td>
        <td
          style="width:140px;text-align:right"
        >
          <div>
            1801-03-04
          </div>
        </td>
        <td>
          <div>
            1809-03-04
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div>
            James Madison
          </div>
        </td>
        <td>
          <div>
            Democratic-Republican
          </div>
        </td>
        <td>
          <div>
            1751
          </div>
        </td>
        <td>
          <div>
            1836
          </div>
        </td>
        <td
          style="width:140px;text-align:right"
        >
          <div>
            1809-03-04
          </div>
        </td>
        <td>
          <div>
            1817-03-04
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div>
            James Monroe
          </div>
        </td>
        <td>
          <div>
            Democratic-Republican
          </div>
        </td>
        <td>
          <div>
            1758
          </div>
        </td>
        <td>
          <div>
            1831
          </div>
        </td>
        <td
          style="width:140px;text-align:right"
        >
          <div>
            1817-03-04
          </div>
        </td>
        <td>
          <div>
            1825-03-04
          </div>
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`basic tests Render plain table with custom cellValueComponent 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align:left;white-space:nowrap"
      >
        <span>
          number
        </span>
      </th>
      <th
        style="text-align:left;white-space:nowrap"
      >
        <span>
          name
        </span>
      </th>
      <th
        style="text-align:left;white-space:nowrap"
      >
        <span>
          party
        </span>
      </th>
      <th
        style="text-align:left;white-space:nowrap"
      >
        <span>
          birth_year
        </span>
      </th>
      <th
        style="text-align:left;white-space:nowrap"
      >
        <span>
          death_year
        </span>
      </th>
      <th
        style="text-align:right;white-space:nowrap;width:140px"
      >
        <span>
          took_office
        </span>
      </th>
      <th
        style="text-align:left;white-space:nowrap"
      >
        <span>
          left_office
        </span>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <div>
          1
        </div>
      </td>
      <td>
        <div>
          George Washington
        </div>
      </td>
      <td>
        <div>
          No Party
        </div>
      </td>
      <td>
        <div>
          1732
        </div>
      </td>
      <td>
        <div>
          1799
        </div>
      </td>
      <td
        style="width:140px;text-align:right"
      >
        <div>
          1789-04-30
        </div>
      </td>
      <td>
        <div>
          1797-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          2
        </div>
      </td>
      <td>
        <div>
          John Adams
        </div>
      </td>
      <td>
        <div>
          Federalist
        </div>
      </td>
      <td>
        <div>
          1735
        </div>
      </td>
      <td>
        <div>
          1826
        </div>
      </td>
      <td
        style="width:140px;text-align:right"
      >
        <div>
          1797-03-04
        </div>
      </td>
      <td>
        <div>
          1801-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          3
        </div>
      </td>
      <td>
        <div>
          Thomas Jefferson
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1743
        </div>
      </td>
      <td>
        <div>
          1826
        </div>
      </td>
      <td
        style="width:140px;text-align:right"
      >
        <div>
          1801-03-04
        </div>
      </td>
      <td>
        <div>
          1809-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          4
        </div>
      </td>
      <td>
        <div>
          James Madison
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1751
        </div>
      </td>
      <td>
        <div>
          1836
        </div>
      </td>
      <td
        style="width:140px;text-align:right"
      >
        <div>
          1809-03-04
        </div>
      </td>
      <td>
        <div>
          1817-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          5
        </div>
      </td>
      <td>
        <div>
          James Monroe
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1758
        </div>
      </td>
      <td>
        <div>
          1831
        </div>
      </td>
      <td
        style="width:140px;text-align:right"
      >
        <div>
          1817-03-04
        </div>
      </td>
      <td>
        <div>
          1825-03-04
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`basic tests Render plain table with custom headerComponent 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align:left;white-space:nowrap"
      >
        <span>
          number
        </span>
      </th>
      <th
        style="text-align:left;white-space:nowrap"
      >
        <span>
          name
        </span>
      </th>
      <th
        style="text-align:left;white-space:nowrap"
      >
        <span>
          party
        </span>
      </th>
      <th
        style="text-align:left;white-space:nowrap"
      >
        <span>
          birth_year
        </span>
      </th>
      <th
        style="text-align:left;white-space:nowrap"
      >
        <span>
          death_year
        </span>
      </th>
      <th
        style="text-align:right;white-space:nowrap;width:140px"
      >
        <span>
          took_office
        </span>
      </th>
      <th
        style="text-align:left;white-space:nowrap"
      >
        <span>
          left_office
        </span>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <div>
          1
        </div>
      </td>
      <td>
        <div>
          George Washington
        </div>
      </td>
      <td>
        <div>
          No Party
        </div>
      </td>
      <td>
        <div>
          1732
        </div>
      </td>
      <td>
        <div>
          1799
        </div>
      </td>
      <td
        style="width:140px;text-align:right"
      >
        <div>
          1789-04-30
        </div>
      </td>
      <td>
        <div>
          1797-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          2
        </div>
      </td>
      <td>
        <div>
          John Adams
        </div>
      </td>
      <td>
        <div>
          Federalist
        </div>
      </td>
      <td>
        <div>
          1735
        </div>
      </td>
      <td>
        <div>
          1826
        </div>
      </td>
      <td
        style="width:140px;text-align:right"
      >
        <div>
          1797-03-04
        </div>
      </td>
      <td>
        <div>
          1801-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          3
        </div>
      </td>
      <td>
        <div>
          Thomas Jefferson
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1743
        </div>
      </td>
      <td>
        <div>
          1826
        </div>
      </td>
      <td
        style="width:140px;text-align:right"
      >
        <div>
          1801-03-04
        </div>
      </td>
      <td>
        <div>
          1809-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          4
        </div>
      </td>
      <td>
        <div>
          James Madison
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1751
        </div>
      </td>
      <td>
        <div>
          1836
        </div>
      </td>
      <td
        style="width:140px;text-align:right"
      >
        <div>
          1809-03-04
        </div>
      </td>
      <td>
        <div>
          1817-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          5
        </div>
      </td>
      <td>
        <div>
          James Monroe
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1758
        </div>
      </td>
      <td>
        <div>
          1831
        </div>
      </td>
      <td
        style="width:140px;text-align:right"
      >
        <div>
          1817-03-04
        </div>
      </td>
      <td>
        <div>
          1825-03-04
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
